cmake_minimum_required (VERSION 3.8)

project ("DesignPatterns")

add_subdirectory("Factory")
add_subdirectory("Singleton")
add_subdirectory("AbstractFactory")
add_subdirectory("ObjectPool")
add_subdirectory("Decarator")
add_subdirectory("DynamicDecarator")
add_subdirectory("Facade")
add_subdirectory("Adapter")
add_subdirectory("Visitor")
add_subdirectory("State")
add_subdirectory("Observer")
add_subdirectory("Observer2")
add_subdirectory("Command")
add_subdirectory("Controller")
add_subdirectory("ChainofResponsibility")
add_subdirectory("Iterator")
add_subdirectory("Template")